--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Tic Tac Toe</h1>
+    <h1>Tic Tac Toe<br> Sahithi</h1>
+    
     <div class="board" id="board">
       <div class="cell" data-cell></div>
       <div class="cell" data-cell></div>
